--- a/IKUT.csproj
+++ b/IKUT.csproj
@@ -24,6 +24,7 @@
     <Content Include="core\css\frame.css" />
     <Content Include="core\css\frame2.css" />
     <Content Include="core\css\menu.css" />
+    <Content Include="core\css\detail.css" />
     <Content Include="core\image\Fake-Frame-101.png" />
     <Content Include="core\image\Green-Background-101.jpg" />
     <Content Include="core\image\Gray-Background-101.jpg" />
@@ -41,6 +42,7 @@
     <Content Include="core\lib\backgrid\backgrid.js" />
     <Content Include="core\lib\bootstrap-datetimepicker\css\bootstrap-datetimepicker.css" />
     <Content Include="core\lib\bootstrap-datetimepicker\js\bootstrap-datetimepicker.min.js" />
+    <Content Include="core\lib\bootstrap-list-filter\bootstrap-list-filter.src.js" />
     <Content Include="core\lib\bootstrap-select\css\bootstrap-select.css" />
     <Content Include="core\lib\bootstrap-select\js\bootstrap-select.js" />
     <Content Include="core\lib\bootstrap-toggle\css\bootstrap-toggle.css" />
@@ -132,22 +134,28 @@
     <TypeScriptCompile Include="core\js\controller\alarmsviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\buttonviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\controller.ts" />
+    <TypeScriptCompile Include="core\js\controller\detailviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\frameviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\homeviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\menusviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\menuviewfactory.ts" />
     <TypeScriptCompile Include="core\js\controller\setting.ts" />
+    <TypeScriptCompile Include="core\js\controller\sideviewfactory.ts" />
+    <TypeScriptCompile Include="core\js\controller\usersviewfactory.ts" />
     <TypeScriptCompile Include="core\js\model\alarm.ts" />
     <TypeScriptCompile Include="core\js\model\model.ts" />
     <TypeScriptCompile Include="core\js\model\user.ts" />
     <TypeScriptCompile Include="core\js\view\alarmsview.ts" />
     <TypeScriptCompile Include="core\js\view\baseview.ts" />
     <TypeScriptCompile Include="core\js\view\buttonview.ts" />
+    <TypeScriptCompile Include="core\js\view\detailview.ts" />
     <TypeScriptCompile Include="core\js\view\frameview.ts" />
     <TypeScriptCompile Include="core\js\view\homeview.ts" />
     <TypeScriptCompile Include="core\js\view\menusview.ts" />
     <TypeScriptCompile Include="core\js\view\menuview.ts" />
+    <TypeScriptCompile Include="core\js\view\sideview.ts" />
     <TypeScriptCompile Include="core\js\view\template.ts" />
+    <TypeScriptCompile Include="core\js\view\usersview.ts" />
     <TypeScriptCompile Include="core\js\view\view.ts" />
     <TypeScriptCompile Include="Scripts\typings\backbone\backbone.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\backgrid\backgrid.d.ts" />
